# grasp-data

./: CMakeLists.txt  README.md
arm/: CMakeLists.txt  highfriction-inertialmod_10x.world  highfriction-inertialmod_1x.world  highfriction-inertialmod_2x.world  highfriction-inertialmod_3x.world  highfriction-inertialmod_4x.world  highfriction-joinedblock.world  highfriction-polygonalall.world  highfriction-polygonalblock.world  highfriction-polygonalhand.world  highfriction-primitiveall.world  inertialmod_10x.world  inertialmod_2x.world  inertialmod_4x.world  joinedblock.world  log.h  polygonalall.world  polygonalblock.world  polygonalhand.world  primitiveall.world  setup.sh  ur10_schunk_controller.cpp  ur10_schunk_controller.h  veryhighfriction-inertialmod_10x.world  veryhighfriction-inertialmod_1x.world  veryhighfriction-inertialmod_2x.world  veryhighfriction-inertialmod_3x.world  veryhighfriction-inertialmod_4x.world  veryhighfriction-joinedblock.world  veryhighfriction-polygonalall.world  veryhighfriction-polygonalblock.world  veryhighfriction-polygonalhand.world  veryhighfriction-primitiveall.world
arm/models/block/: model.config  model.sdf
arm/models/block-highfriction/: model.sdf
arm/models/block-veryhighfriction/: model.sdf
arm/models/block_polycol/: model.sdf
arm/models/block_polycol-highfriction/: model.config  model.sdf
arm/models/block_polycol-highfriction/meshes/collision/: block.dae
arm/models/block_polycol-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid/: model.sdf
arm/models/ur10_schunk_hybrid-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_10x/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_10x-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_10x-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_1x-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_1x-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_2x/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_2x-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_2x-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_3x-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_3x-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_4x/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_4x-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid_inertialmod_4x-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_joinedblock/: model.sdf
arm/models/ur10_schunk_hybrid_joinedblock-highfriction/: model.sdf
arm/models/ur10_schunk_hybrid_joinedblock-veryhighfriction/: model.sdf
arm/models/ur10_schunk_hybrid_polycol/: model.sdf
arm/models/ur10_schunk_hybrid_polycol-highfriction/: model.config  model.sdf
arm/models/ur10_schunk_hybrid_polycol-veryhighfriction/: model.sdf
multiblock/: CMakeLists.txt  eight-block.world  eleven-block.world  five-block.world  four-block.world  highfriction-01-block.world  highfriction-02-block.world  highfriction-03-block.world  highfriction-04-block.world  highfriction-05-block.world  highfriction-06-block.world  highfriction-07-block.world  highfriction-08-block.world  highfriction-09-block.world  highfriction-10-block.world  highfriction-11-block.world  multiblock_controller.cpp  multiblock_controller.h  nine-block.world  one-block.world  seven-block.world  six-block.world  ten-block.world  three-block.world  two-block.world  veryhighfriction-01-block.world  veryhighfriction-02-block.world  veryhighfriction-03-block.world  veryhighfriction-04-block.world  veryhighfriction-05-block.world  veryhighfriction-06-block.world  veryhighfriction-07-block.world  veryhighfriction-08-block.world  veryhighfriction-09-block.world  veryhighfriction-10-block.world  veryhighfriction-11-block.world
multiblock/models/backdrop/: model.config
multiblock/models/block/: model.sdf
multiblock/models/block-highfriction/: model.sdf
multiblock/models/block-veryhighfriction/: model.sdf
multiblock/models/robot-eight-block/: model.sdf
multiblock/models/robot-eleven-block/: model.sdf
multiblock/models/robot-five-block/: model.sdf
multiblock/models/robot-four-block/: model.sdf
multiblock/models/robot-highfriction-01-block/: model.sdf
multiblock/models/robot-highfriction-02-block/: model.sdf
multiblock/models/robot-highfriction-03-block/: model.sdf
multiblock/models/robot-highfriction-04-block/: model.sdf
multiblock/models/robot-highfriction-05-block/: model.sdf
multiblock/models/robot-highfriction-06-block/: model.sdf
multiblock/models/robot-highfriction-07-block/: model.sdf
multiblock/models/robot-highfriction-08-block/: model.sdf
multiblock/models/robot-highfriction-09-block/: model.sdf
multiblock/models/robot-highfriction-10-block/: model.sdf
multiblock/models/robot-highfriction-11-block/: model.sdf
multiblock/models/robot-nine-block/: model.sdf
multiblock/models/robot-one-block/: model.sdf
multiblock/models/robot-seven-block/: model.sdf
multiblock/models/robot-six-block/: model.sdf
multiblock/models/robot-ten-block/: model.sdf
multiblock/models/robot-three-block/: model.sdf
multiblock/models/robot-two-block/: model.sdf
multiblock/models/robot-veryhighfriction-01-block/: model.sdf
multiblock/models/robot-veryhighfriction-02-block/: model.sdf
multiblock/models/robot-veryhighfriction-03-block/: model.sdf
multiblock/models/robot-veryhighfriction-04-block/: model.sdf
multiblock/models/robot-veryhighfriction-05-block/: model.sdf
multiblock/models/robot-veryhighfriction-06-block/: model.sdf
multiblock/models/robot-veryhighfriction-07-block/: model.sdf
multiblock/models/robot-veryhighfriction-08-block/: model.sdf
multiblock/models/robot-veryhighfriction-09-block/: model.sdf
multiblock/models/robot-veryhighfriction-10-block/: model.sdf
multiblock/models/robot-veryhighfriction-11-block/: model.sdf
render_plugin/: .render_plugin.cpp.swp  CMakeLists.txt  render_plugin.cpp
(+106 files in other folders)
